fluxcd/my_workload/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  labels:
    app: my-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-dep
  template:
    metadata:
      labels:
        app: my-dep
    spec:
      containers:
      - name: my-dep
        image: erickmpene/webapp:v2
        ports:
        - containerPort: 80
